--- a/style.css
+++ b/style.css
@@ -120,17 +120,7 @@ take out at the end */
     margin-top: 20px;
 }
 
-.hero-img img,
-.hero-img2 img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 20px;
-    transform: rotate(10deg);
-    transition: 0.8s ease;
-}
-
-.hero-img {
+.hero-img-wrapper {
     position: absolute;
     top: 20%;
     right: 85%;
@@ -141,26 +131,48 @@ take out at the end */
     visibility: visible;
 }
 
-.hero-img:hover img {
+.hero-img,
+.hero-img2 {
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    transform: rotate(10deg);
+    transition: 0.8s ease;
+}
+
+.hero-img:hover {
     transform: rotate(-10deg);
     width: 300px;
 }
 
-.hero-img2 {
+.hero-img2-wrapper {
     position: absolute;
-    top: 25%;
-    left: 70%;
-    width: 20vw;
-    height: 20vw;
+    top: 20%;
+    left: 67%;
+    width: 25vw;
+    height: 25vw;
     animation: float 3s ease-in-out infinite;
     mix-blend-mode: screen;
+}
 
+.hero-img2 img {
+    border-radius: inherit;
+    transition: 1s ease-in-out;
 }
 
 .hero-img2:hover img {
     transform: rotate(-10deg);
     border-radius: 100%;
 }
+
+.hero-img img,
+.hero-img2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
 
 @keyframes float {
     0% {
@@ -235,7 +247,6 @@ take out at the end */
     padding: 30px 0;
     margin-top: 200px;
     margin-bottom: 150px;
-
 }
 
 .CA-line {
@@ -396,39 +407,43 @@ html {
         margin-bottom: 60px;
     }
 
-    
     .hero {
         height: 80vh;
         align-items: flex-end;
+        position: relative;
     }
 
-.hero-img2 img {
-    transform: rotate(1deg);
-
-}
-    .hero-img2 {
-        position: absolute;
-        top: 0;
+    .hero-img2-wrapper {
+        top: 50%;
         left: 50%;
-        width: 80vw;
-        height: 80vh;
-        animation: float 3s ease-in-out infinite;
-        mix-blend-mode: screen;
     }
 
-    .hero-img {
+
+    .hero-img-wrapper {
         visibility: hidden;
     }
 
+    /*
     .hero-wrapper {
         position: relative;
         bottom: 0;
         width: 100%;
     }
+    */
+
+    .hero-img2 {
+        transform: rotate(0);
+        top: 10%;
+        left: 50%;
+        transform: translate(-50%, -100%);
+        width: 60vw;
+        height: 60vw;
+    }
+
 
     .moments {
         position: relative;
-        left: 50%;
+        left: 25%;
     }
 
     .CA {
