--- a/style.css
+++ b/style.css
@@ -326,6 +326,43 @@ html {
     border-radius: 20px;
 }
 
+
+.modal {
+    display: none;
+}
+
+.modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(172, 223, 233, 0.85);
+    z-index: 1;
+}
+
+.modal-close {
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 20px 25px 20px 25px;
+    z-index: 2;
+    cursor: pointer;
+    color: white;
+    font-size: 12px;
+}
+
+.modal-content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    height: auto;
+    background: transparent;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
 .about-footer {
     display: flex;
     backdrop-filter: blur(10px);
@@ -464,6 +501,8 @@ html {
         height: 400px;
         filter: grayscale(100%);
     }
+
+
 }
 
 @media screen and (max-width: 380px) {
