--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ html {
     position: fixed;
     top: 50%;
     left: 50%;
-    width: 500px;
+    max-width: 500px;
     height: auto;
     background: transparent;
     transform: translate(-50%, -50%);
