--- a/style.css
+++ b/style.css
@@ -151,8 +151,18 @@ take out at the end */
     left: 67%;
     width: 25vw;
     height: 25vw;
-    animation: float 3s ease-in-out infinite;
+    transform: rotate(10deg);
     mix-blend-mode: screen;
+
+
+}
+
+.hero-img2 {
+    position: relative;
+
+    width: 100%;
+    height: 100%;
+    animation: float 3s ease-in-out infinite;
 }
 
 .hero-img2 img {
@@ -274,7 +284,6 @@ footer {
     font-family: inter;
     font-size: 21px;
     margin-top: 50px;
-
 }
 
 html {
@@ -438,7 +447,6 @@ html {
         visibility: hidden;
     }
 
-
     body {
         padding: 15px;
         line-height: 1.4;
@@ -457,33 +465,17 @@ html {
         position: relative;
     }
 
-    .hero-img2-wrapper {
-        top: 50%;
-        left: 50%;
-    }
-
-
     .hero-img-wrapper {
         visibility: hidden;
     }
 
-    /*
-    .hero-wrapper {
-        position: relative;
-        bottom: 0;
-        width: 100%;
-    }
-    */
-
-    .hero-img2 {
-        transform: rotate(0);
-        top: 10%;
+    .hero-img2-wrapper {
+        top: 50%;
         left: 50%;
-        transform: translate(-50%, -120%);
-        width: 60vw;
-        height: 60vw;
+        width: 70vw;
+        height: 70vw;
+        transform: rotate(-3deg) translate(-50%, -110%);
     }
-
 
     .moments {
         position: relative;
@@ -508,7 +500,6 @@ html {
         height: 400px;
         filter: grayscale(100%);
     }
-
 }
 
 @media screen and (max-width: 380px) {
@@ -538,5 +529,4 @@ html {
         line-height: 1;
         font-family: anton sc;
     }
-
 }
