--- a/style.css
+++ b/style.css
@@ -237,6 +237,47 @@ take out at the end */
     }
 }
 
+/*OVERLAYS*/
+
+
+.modal {
+    display: none;
+    visibility: visible;
+}
+
+.modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(17, 17, 17, 0.85);
+    z-index: 1;
+}
+
+.modal-close {
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 20px 25px 20px 25px;
+    z-index: 2;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+}
+
+.modal-content {
+    position: fixed;
+    height: auto;
+    background: transparent;
+    top: 50%;
+    left: 50%;
+    width: 70%;
+    height: 70%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
 /* CONTACT */
 
 .CA h2 {
@@ -333,44 +374,6 @@ html {
     border-radius: 20px;
 }
 
-
-.modal {
-    display: none;
-    visibility: visible;
-}
-
-.modal-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(172, 223, 233, 0.85);
-    z-index: 1;
-}
-
-.modal-close {
-    position: fixed;
-    top: 0;
-    right: 0;
-    padding: 20px 25px 20px 25px;
-    z-index: 2;
-    cursor: pointer;
-    color: white;
-    font-size: 12px;
-}
-
-.modal-content {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    max-width: 500px;
-    height: auto;
-    background: transparent;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-}
-
 .about-footer {
     display: flex;
     backdrop-filter: blur(10px);
@@ -385,12 +388,12 @@ html {
 @media screen and (max-width: 928px) {
 
     .hero {
-        margin: 70px auto 70px auto;
-        height: 70vh;
+        margin: 70px auto 100px auto;
+        height: 90vh;
     }
 
     .galleryimages {
-        width: 30%;
+        width: 46%;
         height: auto;
     }
 
@@ -433,8 +436,7 @@ html {
 @media screen and (max-width: 600px) {
 
     .modal {
-        display: none;
-        visibility: hidden;
+        visibility: visible;
     }
 
     body {
@@ -453,6 +455,7 @@ html {
 
         align-items: flex-end;
         position: relative;
+        height: 85vh;
     }
 
     .hero-img-wrapper {
@@ -499,6 +502,12 @@ html {
 
         font-size: 10px;
         margin-bottom: 20px;
+    }
+
+    .hero {
+
+        height: 60vh;
+        margin: 100px auto 0px auto;
     }
 
     .logo,
