--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ take out at the end */
     background: transparent;
     top: 50%;
     left: 50%;
-    max-width: 500px;
+    width: 70%;
     height: auto;
     transform: translate(-50%, -50%);
     z-index: 2;
