--- a/style.css
+++ b/style.css
@@ -101,10 +101,8 @@ a:hover {
     align-items: center;
     margin: 70px auto 70px auto;
     height: max-content;
-    animation: heroAppear 3s ease-in-out;
+    animation: heroAppear 2s ease-in-out;
 }
-
-/* take out at the end 
 
 @keyframes heroAppear {
     0% {
@@ -118,11 +116,10 @@ a:hover {
     }
 }
 
-take out at the end */
-
 .hero-wrapper {
     margin: 20px;
     width: 100%;
+
 }
 
 .hero-text {
@@ -256,6 +253,8 @@ take out at the end */
     animation: appear ease-in-out;
     animation-timeline: view();
     animation-range: entry 0 cover 40%;
+    -webkit-animation-timeline: view();
+    -webkit-animation-range: entry 0 cover 40%;
 }
 
 .galleryimages:hover {
